test/sematest/valid/test2.valid.java
/* -*- coding:utf-8; mode:java; -*- */

class String {

	public static void main(String[] args) {
	}

}
